# NLArchTest

./: README.md
Data/Results/RQ1/: ArchRuleDSLResult.csv  BenchmarkA.csv  DictoDSLResult.csv  GuardingDSLResult.csv  RQ1.csv
Data/Results/RQ2/: Prompt.md  RQ2.csv
Data/Results/RQ2/BenchmarkB/: class.csv  codeUnit.csv  constructor.csv  field.csv  member.csv  method.csv
Data/Results/RQ2/K-valuePerformanceValidation/: input.csv  output_k=10.csv  output_k=5.csv
Data/Results/RQ2/NLArchTestResult/nl_1/: nl_1_DeepseekR1_70B_output.csv  nl_1_Qwen2.5_72B_output.csv  nl_1_llama3.3_70B_output.csv
Data/Results/RQ2/NL_input/: nl_2_input.csv  nl_3_input.csv
Data/Results/RQ2/RuleSet/: class.csv  codeUnit.csv  constructor.csv  field.csv  member.csv  method.csv
Data/Results/RQ2/SyntaxFirstPerformanceValidation/: input.csv  output-deepseekR1-70b.csv  output-lama-3.3-70b.csv  output-qwen2.5-72b.csv
Data/Results/RQ3/Macro/: Result-Macro-RQ3.csv
Data/Results/RQ3/Micro/: NL1_input.csv  Result-Micro-RQ3.csv
Data/Results/RQ3/Micro/RuleSet/: class.csv  (+5 more)
Data/Results/RQ4/: NASA-TLX _result_9_9.xlsx
Data/Setup/: ProjectScale.csv
Method/NLArchTest/lib/TranslaterMappingLayer/: Cargo.toml  DSL  api.json  config.toml
Method/NLArchTest/lib/TranslaterMappingLayer/interact_with_llm/src/support/: archunit_prompt.md  class_level_fewshot.md  codeUnit_level_fewshot.md  constructor_level_fewshot.md  example_prompt.md  field_level_fewshot.md  member_level_fewshot.md  method_level_fewshot.md  multiple_rounds_prompt.md  sample_prompt.md
Method/Scripts/RQ2/: RQ2_script.py
Method/Scripts/RQ3/: Macro_script_for_Qualitas_Corpus.py  Macro_script_for_RQ4.py  Macro_script_for_archunit_examples.py  Macro_script_for_benchMark.py  Micro_RQ3_script.py
Method/Scripts/RQ4/: RQ4_script_for_Mixed_Effects_Model_Analysis.py  RQ4_script_for_Pairwise_Comparison_with_FDR.py
(+612 files in other folders)
