[package]
name = "guarding"
version = "0.2.6"
authors = ["Inherd Group <group@inherd.org>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/inherd/guarding"
documentation = "https://github.com/inherd/guarding"
homepage = "https://github.com/inherd/guarding"
description = """
Guarding is a guardians for code, architecture, layered. Guarding crate a architecture aguard DSL which based on ArchUnit.
"""
categories = ["text-processing", "command-line-interface", "development-tools"]
exclude = [
    ".github/*",
    ".gitattributes",
    ".adr.json",

    "_fixtures",
    "docs",
    "examples",
]
include = [
    "guarding.guarding",
    "preCommand.txt",
    "config.toml",
    "api_output_history.json"
]

[lib]
path = "src/lib.rs"

[dependencies]
# serialize
serde = { version = "1.0.126", features = ["derive"] }
toml = "0.8.12"
serde_json = "1.0.64"
reqwest = { version = "0.10.0-alpha.2", features = ["blocking", "json"] }
tokio = { version = "1.2.0", features = ["full"] }
hyper = { version = "0.14.4", features = ["client", "http1", "http2"] }
regex = "1.5.4"
colored = "2.1.0"
heck ="0.5.0"


clap = "3.0.0-beta.2"
guarding_parser = { path = "guarding_parser", version = "0.2.6" }
guarding_core = { path = "guarding_core", version = "0.2.6" }
guarding_ident = { path = "guarding_ident", version = "0.3.0" }
interact_with_llm = { path = "./interact_with_llm" }
[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[build-dependencies]
cc = "1.0"

[workspace]
members = [
    "guarding_adapter",
    "guarding_parser",
    "guarding_core",
    "guarding_ident",
    "interact_with_llm",
]
